# ThirdEye

./: Cargo.toml  LICENSE  README.md  SECURITY.md  cli.rs  install.sh  main.rs  requirements.txt  thirdeye.py
engine/: runner.rs
mail/: local.rs  mod.rs  models.rs  parser.rs
recon/: mod.rs
src/: main.rs
src/engine/: correlator.rs  mod.rs  runner.rs  scorer.rs
src/mail/: api.rs  local.rs  mod.rs  models.rs  parser.rs  risk.rs
src/output/: mod.rs
src/recon/: mod.rs
src/utils/: mod.rs
utils/: mod.rs
web/: mod.rs
