[package]
name = "thirdeye"
version = "1.0.0"
edition = "2021"
description = "Advanced passive security intelligence tool"
repository = "https://github.com/BAHUBALISID/ThirdEye"
license = "MIT"
authors = ["Security Team"]

# ---------------- FEATURES ----------------
[features]
default = ["full"]
full = [
    "regex",
    "indicatif",
    "scraper",
    "trust-dns-resolver",
]
minimal = []

# ---------------- DEPENDENCIES ----------------
[dependencies]
clap = { version = "4.0", features = ["derive", "env"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.0"
md5 = "0.7"
sha1 = "0.10"
sha2 = "0.10"
async-trait = "0.1"
atty = "0.2"
ctrlc = "3.0"

# -------- OPTIONAL DEPENDENCIES --------
regex = { version = "1.0", optional = true }
indicatif = { version = "0.17", optional = true }
scraper = { version = "0.12", optional = true }

trust-dns-resolver = { 
    version = "0.22",
    features = ["tokio-runtime"],
    optional = true
}

# ---------------- RELEASE PROFILE ----------------
[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true
